@@ -11,8 +11,6 @@ import com.sun.source.tree.Tree;
 import com.sun.source.tree.TypeParameterTree;
 import com.sun.source.tree.VariableTree;
 import com.sun.source.util.TreePath;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.IdentityHashMap;
 import java.util.List;
 import java.util.Map;
@@ -51,7 +49,7 @@ import org.checkerframework.javacutil.BugInCF;
 import org.checkerframework.javacutil.ElementUtils;
 import org.checkerframework.javacutil.TreeUtils;
 import org.checkerframework.javacutil.TypesUtils;
-import org.plumelib.util.CollectionsPlume;
+import org.plumelib.util.MapsP;
 import org.plumelib.util.StringsPlume;
 
 /**
@@ -67,9 +65,8 @@ public class QualifierDefaults {
   // TODO try to remove some dependencies (e.g. on factory)
 
   /**
-   * This field indicates whether or not a default should be applied to type vars located in the
-   * type being defaulted. This should only ever be true when the type variable is a local variable,
-   * non-component use, i.e.
+   * True if a default should be applied to type vars located in the type being defaulted. This
+   * should only ever be true when the type variable is a local variable, non-component use, i.e.
    *
    * <pre>{@code
    * <T> void method(@NOT_HERE T tIn) {
@@ -107,8 +104,7 @@ public class QualifierDefaults {
   private static final int CACHE_SIZE = 300;
 
   /** Mapping from an Element to the bound type. */
-  protected final Map<Element, BoundType> elementToBoundType =
-      CollectionsPlume.createLruCache(CACHE_SIZE);
+  protected final Map<Element, BoundType> elementToBoundType = MapsP.createLruCache(CACHE_SIZE);
 
   /**
    * Defaults that apply for a certain Element. On the one hand this is used for caching (an earlier
@@ -122,43 +118,38 @@ public class QualifierDefaults {
 
   /** CLIMB locations whose standard default is top for a given type system. */
   public static final List<TypeUseLocation> STANDARD_CLIMB_DEFAULTS_TOP =
-      Collections.unmodifiableList(
-          Arrays.asList(
-              TypeUseLocation.LOCAL_VARIABLE,
-              TypeUseLocation.RESOURCE_VARIABLE,
-              TypeUseLocation.EXCEPTION_PARAMETER,
-              TypeUseLocation.IMPLICIT_UPPER_BOUND));
+      List.of(
+          TypeUseLocation.LOCAL_VARIABLE,
+          TypeUseLocation.RESOURCE_VARIABLE,
+          TypeUseLocation.EXCEPTION_PARAMETER,
+          TypeUseLocation.IMPLICIT_UPPER_BOUND);
 
   /** CLIMB locations whose standard default is bottom for a given type system. */
   public static final List<TypeUseLocation> STANDARD_CLIMB_DEFAULTS_BOTTOM =
-      Collections.unmodifiableList(Arrays.asList(TypeUseLocation.IMPLICIT_LOWER_BOUND));
+      List.of(TypeUseLocation.IMPLICIT_LOWER_BOUND);
 
   /** List of TypeUseLocations that are valid for unchecked code defaults. */
   private static final List<TypeUseLocation> validUncheckedCodeDefaultLocations =
-      Collections.unmodifiableList(
-          Arrays.asList(
-              TypeUseLocation.FIELD,
-              TypeUseLocation.PARAMETER,
-              TypeUseLocation.RETURN,
-              TypeUseLocation.RECEIVER,
-              TypeUseLocation.UPPER_BOUND,
-              TypeUseLocation.LOWER_BOUND,
-              TypeUseLocation.OTHERWISE,
-              TypeUseLocation.ALL));
+      List.of(
+          TypeUseLocation.FIELD,
+          TypeUseLocation.PARAMETER,
+          TypeUseLocation.RETURN,
+          TypeUseLocation.RECEIVER,
+          TypeUseLocation.UPPER_BOUND,
+          TypeUseLocation.LOWER_BOUND,
+          TypeUseLocation.OTHERWISE,
+          TypeUseLocation.ALL);
 
   /** Standard unchecked default locations that should be top. */
   // Fields are defaulted to top so that warnings are issued at field reads, which we believe are
   // more common than field writes. Future work is to specify different defaults for field reads
   // and field writes.  (When a field is written to, its type should be bottom.)
   public static final List<TypeUseLocation> STANDARD_UNCHECKED_DEFAULTS_TOP =
-      Collections.unmodifiableList(
-          Arrays.asList(
-              TypeUseLocation.RETURN, TypeUseLocation.FIELD, TypeUseLocation.UPPER_BOUND));
+      List.of(TypeUseLocation.RETURN, TypeUseLocation.FIELD, TypeUseLocation.UPPER_BOUND);
 
   /** Standard unchecked default locations that should be bottom. */
   public static final List<TypeUseLocation> STANDARD_UNCHECKED_DEFAULTS_BOTTOM =
-      Collections.unmodifiableList(
-          Arrays.asList(TypeUseLocation.PARAMETER, TypeUseLocation.LOWER_BOUND));
+      List.of(TypeUseLocation.PARAMETER, TypeUseLocation.LOWER_BOUND);
 
   /** True if conservative defaults should be used in unannotated source code. */
   private final boolean useConservativeDefaultsSource;
@@ -209,7 +200,7 @@ public class QualifierDefaults {
   /**
    * Check that a default with TypeUseLocation OTHERWISE or ALL is specified.
    *
-   * @return whether we found a Default with location OTHERWISE or ALL
+   * @return true if we found a Default with location OTHERWISE or ALL
    */
   public boolean hasDefaultsForCheckedCode() {
     for (Default def : checkedCodeDefaults) {
@@ -393,30 +384,25 @@ public class QualifierDefaults {
   public void annotate(Element elt, AnnotatedTypeMirror type) {
     if (elt != null) {
       switch (elt.getKind()) {
-        case FIELD:
-        case LOCAL_VARIABLE:
-        case PARAMETER:
-        case RESOURCE_VARIABLE:
-        case EXCEPTION_PARAMETER:
-        case ENUM_CONSTANT:
+        case FIELD,
+            LOCAL_VARIABLE,
+            PARAMETER,
+            RESOURCE_VARIABLE,
+            EXCEPTION_PARAMETER,
+            ENUM_CONSTANT -> {
           String varName = elt.getSimpleName().toString();
           ((GenericAnnotatedTypeFactory<?, ?, ?, ?>) atypeFactory)
               .getDefaultForTypeAnnotator()
               .defaultTypeFromName(type, varName);
-
-          break;
-
-        case METHOD:
+        }
+        case METHOD -> {
           String methodName = elt.getSimpleName().toString();
           AnnotatedTypeMirror returnType = ((AnnotatedExecutableType) type).getReturnType();
           ((GenericAnnotatedTypeFactory<?, ?, ?, ?>) atypeFactory)
               .getDefaultForTypeAnnotator()
               .defaultTypeFromName(returnType, methodName);
-
-          break;
-
-        default:
-          break;
+        }
+        default -> {} // do nothing
       }
     }
 
@@ -457,12 +443,12 @@ public class QualifierDefaults {
     Tree prev = null;
 
     for (Tree t : path) {
-      switch (TreeUtils.getKindRecordAsClass(t)) {
-        case ANNOTATED_TYPE:
-        case ANNOTATION:
+      switch (t.getKind()) {
+        case ANNOTATED_TYPE, ANNOTATION -> {
           // If the tree is in an annotation, then there is no relevant scope.
           return null;
-        case VARIABLE:
+        }
+        case VARIABLE -> {
           VariableTree vtree = (VariableTree) t;
           ExpressionTree vtreeInit = vtree.getInitializer();
           @SuppressWarnings("interning:not.interned") // check cached value
@@ -484,14 +470,14 @@ public class QualifierDefaults {
             break;
           }
           return TreeUtils.elementFromDeclaration((VariableTree) t);
-        case METHOD:
+        }
+        case METHOD -> {
           return TreeUtils.elementFromDeclaration((MethodTree) t);
-        case CLASS: // Including RECORD
-        case ENUM:
-        case INTERFACE:
-        case ANNOTATION_TYPE:
+        }
+        case CLASS, RECORD, ENUM, INTERFACE, ANNOTATION_TYPE -> {
           return TreeUtils.elementFromDeclaration((ClassTree) t);
-        default: // Do nothing.
+        }
+        default -> {} // Do nothing.
       }
       prev = t;
     }
@@ -518,29 +504,21 @@ public class QualifierDefaults {
     // The location to take defaults from.
     Element elt;
     switch (tree.getKind()) {
-      case MEMBER_SELECT:
-        elt = TreeUtils.elementFromUse((MemberSelectTree) tree);
-        break;
-
-      case IDENTIFIER:
+      case MEMBER_SELECT -> elt = TreeUtils.elementFromUse((MemberSelectTree) tree);
+      case IDENTIFIER -> {
         elt = TreeUtils.elementFromUse((IdentifierTree) tree);
         if (ElementUtils.isTypeDeclaration(elt)) {
           // If the identifier is a type, then use the scope of the tree.
           elt = nearestEnclosingExceptLocal(tree);
         }
-        break;
-
-      case METHOD_INVOCATION:
-        elt = TreeUtils.elementFromUse((MethodInvocationTree) tree);
-        break;
-
+      }
+      case METHOD_INVOCATION -> elt = TreeUtils.elementFromUse((MethodInvocationTree) tree);
       // TODO cases for array access, etc. -- every expression tree
       // (The above probably means that we should use defaults in the
       // scope of the declaration of the array.  Is that right?  -MDE)
-
-      default:
-        // If no associated symbol was found, use the tree's (lexical) scope.
-        elt = nearestEnclosingExceptLocal(tree);
+      default ->
+          // If no associated symbol was found, use the tree's (lexical) scope.
+          elt = nearestEnclosingExceptLocal(tree);
         // elt = nearestEnclosing(tree);
     }
     // System.out.println("applyDefaults on tree " + tree +
@@ -578,9 +556,7 @@ public class QualifierDefaults {
       return null;
     }
 
-    if (!atypeFactory.isSupportedQualifier(anno)) {
-      anno = atypeFactory.canonicalAnnotation(anno);
-    }
+    anno = atypeFactory.canonicalAnnotation(anno);
 
     if (atypeFactory.isSupportedQualifier(anno)) {
       TypeUseLocation[] locations =
@@ -715,11 +691,11 @@ public class QualifierDefaults {
   }
 
   /**
-   * Given an element, returns whether the conservative default should be applied for it. Handles
+   * Given an element, returns true if the conservative default should be applied for it. Handles
    * elements from bytecode or source code.
    *
    * @param annotationScope the element that the conservative default might apply to
-   * @return whether the conservative default applies to the given element
+   * @return true if the conservative default applies to the given element
    */
   public boolean applyConservativeDefaults(Element annotationScope) {
     if (annotationScope == null) {
@@ -895,25 +871,25 @@ public class QualifierDefaults {
         // Some defaults only apply to the top level type.
         boolean isTopLevelType = t == type;
         switch (location) {
-          case FIELD:
+          case FIELD -> {
             if (scope != null && scope.getKind() == ElementKind.FIELD && isTopLevelType) {
               addAnnotation(t, qual);
             }
-            break;
-          case LOCAL_VARIABLE:
+          }
+          case LOCAL_VARIABLE -> {
             if (scope != null && scope.getKind() == ElementKind.LOCAL_VARIABLE && isTopLevelType) {
               // TODO: how do we determine that we are in a cast or instanceof type?
               addAnnotation(t, qual);
             }
-            break;
-          case RESOURCE_VARIABLE:
+          }
+          case RESOURCE_VARIABLE -> {
             if (scope != null
                 && scope.getKind() == ElementKind.RESOURCE_VARIABLE
                 && isTopLevelType) {
               addAnnotation(t, qual);
             }
-            break;
-          case EXCEPTION_PARAMETER:
+          }
+          case EXCEPTION_PARAMETER -> {
             if (scope != null
                 && scope.getKind() == ElementKind.EXCEPTION_PARAMETER
                 && isTopLevelType) {
@@ -926,8 +902,8 @@ public class QualifierDefaults {
                 }
               }
             }
-            break;
-          case PARAMETER:
+          }
+          case PARAMETER -> {
             if (scope != null && scope.getKind() == ElementKind.PARAMETER && isTopLevelType) {
               addAnnotation(t, qual);
             } else if (scope != null
@@ -942,8 +918,8 @@ public class QualifierDefaults {
                 }
               }
             }
-            break;
-          case RECEIVER:
+          }
+          case RECEIVER -> {
             if (scope != null
                 && scope.getKind() == ElementKind.PARAMETER
                 && isTopLevelType
@@ -962,8 +938,8 @@ public class QualifierDefaults {
                 addAnnotation(receiver, qual);
               }
             }
-            break;
-          case RETURN:
+          }
+          case RETURN -> {
             if (scope != null
                 && scope.getKind() == ElementKind.METHOD
                 && t.getKind() == TypeKind.EXECUTABLE
@@ -973,8 +949,8 @@ public class QualifierDefaults {
                 addAnnotation(returnType, qual);
               }
             }
-            break;
-          case CONSTRUCTOR_RESULT:
+          }
+          case CONSTRUCTOR_RESULT -> {
             if (scope != null
                 && scope.getKind() == ElementKind.CONSTRUCTOR
                 && t.getKind() == TypeKind.EXECUTABLE
@@ -986,45 +962,43 @@ public class QualifierDefaults {
                 addAnnotation(returnType, qual);
               }
             }
-            break;
-          case IMPLICIT_LOWER_BOUND:
+          }
+          case IMPLICIT_LOWER_BOUND -> {
             if (isLowerBound && boundType.isOneOf(BoundType.UNBOUNDED, BoundType.UPPER)) {
               addAnnotation(t, qual);
             }
-            break;
-          case EXPLICIT_LOWER_BOUND:
+          }
+          case EXPLICIT_LOWER_BOUND -> {
             if (isLowerBound && boundType.isOneOf(BoundType.LOWER)) {
               addAnnotation(t, qual);
             }
-            break;
-          case LOWER_BOUND:
+          }
+          case LOWER_BOUND -> {
             if (isLowerBound) {
               addAnnotation(t, qual);
             }
-            break;
-          case IMPLICIT_UPPER_BOUND:
+          }
+          case IMPLICIT_UPPER_BOUND -> {
             if (isUpperBound && boundType.isOneOf(BoundType.UNBOUNDED, BoundType.LOWER)) {
               addAnnotation(t, qual);
             }
-            break;
-          case EXPLICIT_UPPER_BOUND:
+          }
+          case EXPLICIT_UPPER_BOUND -> {
             if (isUpperBound && boundType.isOneOf(BoundType.UPPER)) {
               addAnnotation(t, qual);
             }
-            break;
-          case UPPER_BOUND:
+          }
+          case UPPER_BOUND -> {
             if (this.isUpperBound) {
               addAnnotation(t, qual);
             }
-            break;
-          case OTHERWISE:
-          case ALL:
-            // TODO: forbid ALL if anything else was given.
-            addAnnotation(t, qual);
-            break;
-          default:
-            throw new BugInCF(
-                "QualifierDefaults.DefaultApplierElement: unhandled location: " + location);
+          }
+          case OTHERWISE, ALL ->
+              // TODO: forbid ALL if anything else was given.
+              addAnnotation(t, qual);
+          default ->
+              throw new BugInCF(
+                  "QualifierDefaults.DefaultApplierElement: unhandled location: " + location);
         }
 
         return super.scan(t, qual);
@@ -1143,12 +1117,12 @@ public class QualifierDefaults {
    * @return the boundType for type
    */
   private BoundType getBoundType(AnnotatedTypeMirror type) {
-    if (type instanceof AnnotatedTypeVariable) {
-      return getTypeVarBoundType((AnnotatedTypeVariable) type);
+    if (type instanceof AnnotatedTypeVariable atv) {
+      return getTypeVarBoundType(atv);
     }
 
-    if (type instanceof AnnotatedWildcardType) {
-      return getWildcardBoundType((AnnotatedWildcardType) type);
+    if (type instanceof AnnotatedWildcardType awt) {
+      return getWildcardBoundType(awt);
     }
 
     throw new BugInCF("Unexpected type kind: type=" + type);
@@ -1170,7 +1144,7 @@ public class QualifierDefaults {
    * @param typeParamElem the type parameter element
    * @return the boundType (UPPER or UNBOUNDED) of the declaration of typeParamElem
    */
-  // Results are cached in {@link elementToBoundType}.
+  // Results are cached in {@link #elementToBoundType}.
   private BoundType getTypeVarBoundType(TypeParameterElement typeParamElem) {
     BoundType prev = elementToBoundType.get(typeParamElem);
     if (prev != null) {
@@ -1196,8 +1170,7 @@ public class QualifierDefaults {
       }
 
     } else {
-      if (typeParamDecl instanceof TypeParameterTree) {
-        TypeParameterTree tptree = (TypeParameterTree) typeParamDecl;
+      if (typeParamDecl instanceof TypeParameterTree tptree) {
 
         List<? extends Tree> bnds = tptree.getBounds();
         if (bnds != null && !bnds.isEmpty()) {
